chore: initial game

--- a/src/global.css
+++ b/src/global.css
@@ -37,10 +37,16 @@ html {
     "Segoe UI Emoji",
     "Segoe UI Symbol",
     "Noto Color Emoji";
+  touch-action: manipulation;
 }
 
 body {
   padding: 0;
   margin: 0;
   line-height: inherit;
+  touch-action: manipulation;
+}
+
+button {
+  all: unset;
 }
